assets/styles/layouts/_feed.scss
.karu-theme {
  .primary-feed-container {
    @include flexstretch();
  }
  .feed {
    margin: 0 0 $spacing;
    @include flexstretch();
  }
  .feed--singlehero {
    & > .feed-item {
      width: 100%;
      height: 500px;
      background-image: url(https://raw.githubusercontent.com/karuto/mangatalk-modern/jsbackup/assets/img/thumb_default_lg.jpg);
    }
  }
  .feed--singlehero__bg {
    background-position: center;
    background-size: cover;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: auto;
    height: 100%;
    z-index: -1;
    margin: 0 15px; /* matching bootstrap column paddings */
    @include gradientmask();
  }
  .feed--featured {
    border-top: 3px solid $color-darkest;
    .feed-item__header {
      margin-left: 65px; /* testing homepage featured feed */
    }
    & > .feed-item {
      counter-increment: ind-counter 1;
      &:before {
        position: absolute;
        top: 25px;
        left: 0;
        content: counter(ind-counter,decimal-leading-zero);
        font-family: NeueHaas,sans-serif;
        font-size: 43px;
        font-weight: 200;
        line-height: 1;
        color: $hightlight-color;
        text-rendering: optimizeLegibility;
        visibility: visible;
      }
    }
  }
  .feed-item {
    position: relative;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;

    @media (min-width: $desktop-min) {
      width: 50%;
    }
    @media (max-width: $mobile-max) {
      width: 100%;
    }
  }
  .feed-item__header {
    padding: $spacing-large 0;
    width: 100%;
    /*border-bottom: 1px solid $color-dark;*/
  }
  .feed-item__title {
    margin-top: 0; /* Reset Bootstrap values */
    margin-bottom: $spacing-small; /* Reset Bootstrap values */
    & > a {
      font-weight: 900;
      color: $color-darkest;
    }
  }
  .feed-item__excerpt {
    margin-bottom: $spacing-small;
    font-size: $base-font-size;
    line-height: $base-line-height;
    & > p {
      margin-top: 0; /* Reset Bootstrap values */
      margin-bottom: 0; /* Reset Bootstrap values */
    }
  }
  .feed-item__time {
    font-size: $subtle-font-size;
    line-height: $subtle-line-height;
  }
  .nav-links {

  }
  .nav-next,
  .nav-previous {
    padding-bottom: $spacing-xxlarge*2;
    display: inline-block;
  }
  .nav-next {
    float: left;
  }
  .nav-previous {
    float: right;
  }
}

